SplashScreen some finished

--- a/app/src/main/res/animator/splash_animation.xml
+++ b/app/src/main/res/animator/splash_animation.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="1000">
+    android:duration="1000"
+    android:interpolator="@anim/anim">
 
     <propertyValuesHolder
         android:propertyName="rotation"
         android:valueType="floatType"
         android:valueFrom="0.0"
         android:valueTo="360.0"/>
-<propertyValuesHolder
+
+    <propertyValuesHolder
         android:propertyName="scaleX"
         android:valueType="floatType"
         android:valueFrom="0.0"
         android:valueTo="0.4"/>
-<propertyValuesHolder
+
+    <propertyValuesHolder
         android:propertyName="scaleY"
         android:valueType="floatType"
         android:valueFrom="0.0"
