--- a/app/src/main/res/drawable/animated_img.xml
+++ b/app/src/main/res/drawable/animated_img.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <animated-vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:drawable="@drawable/oke1_2">
+    android:drawable="@drawable/logo">
     <target
         android:animation="@animator/splash_animation"
         android:name="animationGroup"/>
