--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="unselected">#48466D</color>
     <color name="selected">#793FDF</color>
+    <color name="bac_color">#C9B2F2</color>
 
 
 </resources>
